# Mklink-AI-Probe

./: .gitignore  README.md  latest.json
Mklink-AI-Probe/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SKILL.md  pyproject.toml
Mklink-AI-Probe/.claude-plugin/: plugin.json
Mklink-AI-Probe/_maintainer/release/: prepare_release.py  publish_update_release.py
Mklink-AI-Probe/_maintainer/testing/: route_utils.py
Mklink-AI-Probe/docs/ai/: CURRENT_HANDOFF.md  project-memory.json  project-memory.schema.json
Mklink-AI-Probe/docs/verification/: full-skill-release-v0.1.0-rc.1.md  high-throughput-streams.md  online-flash-hil.md  task8-rtt-superwatch-synthetic.md
Mklink-AI-Probe/gui/: package-lock.json  package.json  vite.config.ts
Mklink-AI-Probe/gui/src/: App.vue  (+3 more)
Mklink-AI-Probe/mklink/: __main__.py  _deps.py  _rtt_viewer_template.html  bridge.py  c_layout.py  cli.py  debug_control.py  device.py  discovery.py  dump_memory.py  dwarf_parser.py  elf_backend.py  elf_builtin.py  elf_external.py  firmware_check.py  flash.py  hardfault.py  hpm_config.py  mcp_server.py  mcu_profiles.json  memmap.py  memory_access.py  offline_download.py  project_config.py  rtt.py  rtt_viewer.py  superwatch.py  symbol_catalog.py  systemview_analyzer.py  systemview_parser.py  toolchain.py  typeinfo.py  vofa_viewer.py  watch.py  web_entry.py
Mklink-AI-Probe/references/: commands-flash-rtt.md  commands-memory.md  commands-remote-gui.md  firmware-download-priority.md  install.md  rtt-static-mode.md  triggers.md  web-entry.md  workflows.md
Mklink-AI-Probe/scripts/: ai_memory.py  skill_update.py
(+243 files in other folders)
