[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mklink"
version = "0.1.0rc2"
description = "Mklink AI Probe - Embedded Debug Toolkit"
requires-python = ">=3.9"
dependencies = ["pyserial", "pymodbus>=3.0", "pyelftools==0.32"]

[project.optional-dependencies]
gui = [
    "fastapi>=0.100",
    "starlette>=0.40,<0.47",
    "uvicorn>=0.20",
    "websockets>=11.0",
    "pyocd>=0.44,<0.45",
    "intelhex>=2.3",
    "python-multipart>=0.0.9",
]
test = ["pytest"]
e2e = ["pytest", "playwright"]
hil = ["pytest", "playwright", "requests"]
mcp = ["fastmcp>=2.0"]

[tool.pytest.ini_options]
testpaths = ["_maintainer/testing/tests"]
pythonpath = [".", "_maintainer/testing", "_maintainer/testing/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mklink*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"mklink" = ["*.json", "modbus/*.html", "modbus/profiles/*.json", "modbus/prompts/*.md"]
